nok-test/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nok-apps-ingress
  namespace: nok-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2 # Rewrites the URL path for the backend service
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: test.nok.local # kpt-set: ${ingress-host}
    http:
      paths:
      - path: /prometheus(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: prometheus-svc
            port:
              number: 9090
      - path: /grafana(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: grafana-svc
            port:
              number: 3000
      - path: /gnmic(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: gnmic-svc
            port:
              number: 9804
